--- a/exercicios/index.html
+++ b/exercicios/index.html
@@ -1,9 +1,13 @@
+<!doctype html>
+<html lang="pt-br" data-bs-theme="dark">
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Balls</title>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <link rel="stylesheet" type="text/css" href="estilo.css">
 <body>
@@ -24,10 +28,35 @@
         <button type="button" id="formularioBotao">click</button>
     </form>
         <ul id="ulForm"></ul>
-        <div id="myDiv" style="width: 200px; height: 200px; background-color: yellow;"></div>
 
+          <div class="Bloco"></div>
+
+<header class="w-100 d-flex flex-row gap-2 mx-auto my-0 p-2 border-bottom offset-xxl-7">
+    <ul class="d-flex flex-row p-2 list-unstyled gap-1 mx-auto my-0">
+        <li class="text-center nav-item h4>"><a href="#" class="link-primary"> Item 1</a></li>
+        <li class="text-center nav-item h4>"><a href="#" class="link-primary"> Item 2</a></li>
+        <li class="text-center nav-item h4>"><a href="#" class="link-primary"> Item 3</a></li>
+
+    </ul>
+</header>
 </body>
 
 <script src="script.js"></script>
+
+<button onclick="createImage()">Criar Imagem</button>
+<div id="imageContainer"></div>
+<script>
+  function createImage() {
+    const imgElement = document.createElement('img');
+    imgElement.src = 'https://via.placeholder.com/150';
+    imgElement.alt = 'Imagem de exemplo';
+    imgElement.width = 150;
+    imgElement.height = 150;
+    const container = document.getElementById('imageContainer');
+    container.appendChild(imgElement);
+  }
+</script>
+
+
 
 
